tests/ui/specialization/issue-39448.stderr
error[E0391]: cycle detected when computing whether impls specialize one another
  --> $DIR/issue-39448.rs:24:1
   |
LL | impl<T: A, U: A + FromA<T>> FromA<T> for U {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: ...which requires evaluating trait selection obligation `u16: FromA<u8>`...
   = note: ...which again requires computing whether impls specialize one another, completing the cycle
note: cycle used when building specialization graph of trait `FromA`
  --> $DIR/issue-39448.rs:20:1
   |
LL | trait FromA<T> {
   | ^^^^^^^^^^^^^^
   = note: see https://rustc-dev-guide.rust-lang.org/overview.html#queries and https://rustc-dev-guide.rust-lang.org/query.html for more information

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0391`.
